<resources>
    <string name="app_name">Proyecto Final</string>
    <string name="Estudiante1">Gustavo Colucci</string>
    <string name="Estudiante2">Greg</string>
    <string name="Estudiante3">luis</string>
    <string name="Estudiante4">Jorge Luis Gonzalez</string>
    <string name="Estudiante5">Jorge Luis Gonzalez</string>
    <string name="UTP">Universidad Tecnologica de Panama</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>