<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAFAFA"
    tools:context=".SplashActivity">

    <TextView
        android:id="@+id/UTP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/UTP"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"

        />
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/UTP"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/logo_utp_1_72"
        />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Desarrollado por:"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"

            />
        <TextView
            android:id="@+id/Estudiante1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Estudiante1"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"

            />
        <TextView
            android:id="@+id/Estudiante2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Estudiante2"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/Estudiante1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"

            />
        <TextView
            android:id="@+id/Estudiante3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Estudiante3"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/Estudiante2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"

            />
        <TextView
            android:id="@+id/Estudiante4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Estudiante4"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/Estudiante3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"

            />
        <TextView
            android:id="@+id/Estudiante5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Estudiante5"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/Estudiante4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"

            />

</androidx.constraintlayout.widget.ConstraintLayout>